create url set with spell presets
